Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100068

Colors of some SVG images are wrong

    XMLWordPrintable

Details

    • All
    • 9485bb6162 (qt/qtsvg/dev) 9485bb6162 (qt/tqtc-qtsvg/dev) 50a5ffd0c0 (qt/qtsvg/6.4) 50a5ffd0c0 (qt/tqtc-qtsvg/6.4) 50a5ffd0c0 (qt/qtsvg/6.4.0) 50a5ffd0c0 (qt/tqtc-qtsvg/6.4.0) 50a5ffd0c0 (qt/qtsvg/6.4.1) 50a5ffd0c0 (qt/tqtc-qtsvg/6.4.1)

    Description

      Qt SVG paints some SVG images with wrong colors (see attachments). The top row in the attached PNG file shows the correct colors, the bottom row how Qt renders them.

      Attachments

        1. BGM_Ploshtad.svg
          9 kB
        2. BGM_Sipei.svg
          11 kB
        3. BGM_Skali.svg
          29 kB
        4. QtSVGBug-01.png
          QtSVGBug-01.png
          87 kB
        For Gerrit Dashboard: QTBUG-100068
        # Subject Branch Project Status CR V

        Activity

          People

            vgt Eirik Aavitsland
            Harald Meyer Harald Meyer
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes